refactor: 스트림, 람다 등을 사용해 가독성 개선 리팩토링
- 무분별한 if문, for문 등이 사용되는 부분을 깔끔하게 리팩토링