@@ -7,14 +7,11 @@ import com.peeerr.climbing.entity.Category;
 import com.peeerr.climbing.exception.already.AlreadyExistsCategoryException;
 import com.peeerr.climbing.exception.notfound.CategoryNotFoundException;
 import com.peeerr.climbing.repository.CategoryRepository;
-
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import java.util.List;
 
 @RequiredArgsConstructor
 @Service
@@ -26,7 +23,7 @@ public class CategoryService {
     public List<CategoryResponse> getCategories() {
         return categoryRepository.findAll().stream()
                 .map(CategoryResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
@@ -45,7 +42,7 @@ public class CategoryService {
         validateDuplicateCategory(request.getCategoryName());
 
         Category category = categoryRepository.findById(categoryId)
-                .orElseThrow(() -> new CategoryNotFoundException());
+                .orElseThrow(CategoryNotFoundException::new);
 
         category.changeCategoryName(request.getCategoryName());
     }
@@ -53,17 +50,16 @@ public class CategoryService {
     @Transactional
     public void removeCategory(Long categoryId) {
         Category category = categoryRepository.findById(categoryId)
-                .orElseThrow(() -> new CategoryNotFoundException());
+                .orElseThrow(CategoryNotFoundException::new);
 
         categoryRepository.delete(category);
     }
 
     public void validateDuplicateCategory(String categoryName) {
-        Optional<Category> category = categoryRepository.findCategoryByCategoryName(categoryName);
-
-        category.ifPresent(foundCategory -> {
-            throw new AlreadyExistsCategoryException();
-        });
+        categoryRepository.findCategoryByCategoryName(categoryName)
+                .ifPresent(category -> {
+                    throw new AlreadyExistsCategoryException();
+                });
     }
 
 }
